--- a/about.html
+++ b/about.html
@@ -23,33 +23,18 @@
                 <section class="col-md-6 mb-3">
                     <article>
                         <p>
-                            Na cidade onde a inovação corria nas veias, quatro jovens empreendedores chamados Werik
-                            Jahel, Hesnan Ávila, Walber Ruthierre e Fabrício Souza. Eles eram alunos dedicados do Instituto
-                            Federal de Sergipe, apaixonados por tecnologia e determinados a deixar sua marca no mundo.
+                            In the city where innovation flowed through their veins, four young entrepreneurs named Werik Jahel, Hesnan Ávila, Walber Ruthierre, and Fabrício Souza stood out. They were dedicated students at the Federal Institute of Sergipe, passionate about technology and determined to make their mark on the world.
                         </p>
                         <p>
-                            Um dia, durante uma aula sobre empreendedorismo, surgiu a ideia de criar algo grandioso: um grupo
-                            empresarial focado em tecnologia, batizado como W2HF. Cada letra representava um dos fundadores.
-                            Empolgados, eles decidiram expandir a ideia e fundar uma plataforma de comércio eletrônico, o iTec.
+                            One day, during an entrepreneurship class, the idea of creating something grandiose emerged: a technology-focused business group named W2HF. Each letter represented one of the founders. Excited, they decided to expand the idea and establish an e-commerce platform, iTec.
                         </p>
                         <p>
-                            O iTec nasceu da vontade de oferecer as mais inovadoras e recentes tecnologias para todos, de gamers
-                            a cientistas, de estudantes a empresários. Werik, o visionário, idealizou um site intuitivo e fácil
-                            de usar, onde os clientes poderiam explorar um vasto catálogo de produtos inovadores.
-                            Hesnan, o estrategista, traçou planos para uma logística eficiente, garantindo que cada produto
-                            chegasse rapidamente aos compradores. Walber, o comunicador nato, cuidava das redes sociais e da
-                            comunidade em crescimento, enquanto Fabrício, o especialista em tecnologia, supervisionava a
-                            qualidade dos produtos.
+                            iTec was born from the desire to offer the most innovative and recent technologies to everyone, from gamers to scientists, from students to entrepreneurs. Werik, the visionary, envisioned an intuitive and easy-to-use website where customers could explore a vast catalog of innovative products. Hesnan, the strategist, outlined plans for efficient logistics, ensuring that each product reached buyers quickly. Walber, the natural communicator, took care of social media and the growing community, while Fabrício, the technology expert, supervised product quality.
                         </p>
                         <p>
-                            Juntos, eles enfrentaram desafios e superaram obstáculos. Inicialmente, o iTec era um sonho, mas com
-                            determinação, trabalho árduo e colaboração, tornou-se uma realidade. A reputação do iTec cresceu, e
-                            em pouco tempo, o nome W2HF se tornou sinônimo de inovação e confiança.
-                            O grupo empresarial prosperou, e sua marca ganhou reconhecimento global. E assim, a jornada da W2HF
-                            e do iTec continuou, com os quatro amigos unidos pelo amor à tecnologia e pelo desejo de tornar o
-                            mundo digital mais acessível a todos.
+                            Together, they faced challenges and overcame obstacles. Initially, iTec was a dream, but with determination, hard work, and collaboration, it became a reality. The reputation of iTec grew, and in no time, the name W2HF became synonymous with innovation and trust. The business group thrived, and its brand gained global recognition. And so, the journey of W2HF and iTec continued, with the four friends united by their love for technology and the desire to make the digital world more accessible to all.
                         </p>
-                    </article>
+                    </article>                    
                 </section>
             </div>
         </main>
