--- a/bestSellers.html
+++ b/bestSellers.html
@@ -29,12 +29,6 @@
       <div id="navbarCollapse" class="navbar-collapse collapse">
         <ul class="navbar-nav m-auto ps-3">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="bestSellers.html">Best Sellers</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link active" href="newArrivals.html">New Arrivals</a>
           </li>
 
@@ -51,9 +45,10 @@
                 <a class="sub-menu-item" href="desktop.html">Desktops</a>
               </li>
               <li>
-                <a class="sub-menu-item" href="smarthphones.html"
-                  >Smartphones</a
-                >
+                <a class="sub-menu-item" href="smarthphones.html">Smartphones</a>
+              </li>
+              <li>
+                <a class="sub-menu-item" href="wearables.html">Wearables</a>
               </li>
             </div>
             <!--itens-eletronic-->
