--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark">
                 <label class="contact" for="werik">Email</label>
-                <a href="#">w2hf@itec.com</a>
+                <a href="#">itec@gmail.com</a>
               </li>
               <li class="list-group-item bg-dark">
                 <label class="contact" for="hesnan">Instagram</label>
