--- a/desktop.html
+++ b/desktop.html
@@ -28,9 +28,6 @@
       <div id="navbarCollapse" class="navbar-collapse collapse">
         <ul class="navbar-nav m-auto ps-3">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link active" href="bestSellers.html">Best Sellers</a>
           </li>
           <li class="nav-item">
@@ -47,12 +44,7 @@
                 <a class="sub-menu-item" href="laptops.html">Laptops</a>
               </li>
               <li>
-                <a class="sub-menu-item" href="desktop.html">Desktops</a>
-              </li>
-              <li>
-                <a class="sub-menu-item" href="smarthphones.html"
-                  >Smartphones</a
-                >
+                <a class="sub-menu-item" href="smarthphones.html">Smartphones</a>
               </li>
               <li>
                 <a class="sub-menu-item" href="wearables.html">Wearables</a>
