--- a/registrar.html
+++ b/registrar.html
@@ -21,7 +21,7 @@
           </div>
         </div>
       </div>
-      <h2>Cadastro</h2>
+      <h2>Registration</h2>
       <form>
         <div class="row">
           <div class="col-md-6 mb-3">
