--- a/newArrivals.html
+++ b/newArrivals.html
@@ -70,9 +70,6 @@
           <li class="nav-item welcome">
             <a class="nav-link active boas-vindas">Welcome</a>
           </li>
-          <li class="nav-item welcome">
-            <a class="nav-link active logout">Logout</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -473,14 +470,19 @@
           <div class="container">
             
           </div>
-          <div style="display: flex;">
-            <a class="open_carrinho navbar-brand me-1" href="#"
-              ><i class="fa-solid fa-cart-shopping"></i
-            ></a>
-            <a style="cursor: pointer;" class="navbar-brand" 
-              ><i class="fa-solid fa-user"></i
-            ></a>
-          </div>
+          <div class="dropup" style="display: flex;">
+            <a style="cursor: pointer;" class="navbar-brand" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa-solid fa-user"></i>
+            </a>
+
+            <a class="open_carrinho navbar-brand me-1" href="#">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+          
+            <div class="dropdown-menu" aria-labelledby="userDropdown">
+              <a class="dropdown-item" href="user.html">Profile</a>
+              <a class="dropdown-item logout" href="#">Logout</a>
+            </div>
         </div>
       </nav>
     </footer>
