modified: btn in others screens

--- a/wearables.html
+++ b/wearables.html
@@ -496,6 +496,7 @@
     <!-- <script src="js/slide-down.js"></script> -->
     <script src="js/modal-login.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/carrinho.js"></script>
     <script src="js/submenu.js"></script>
   </body>
 </html>
