--- a/laptops.html
+++ b/laptops.html
@@ -153,8 +153,12 @@
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/script.js"></script>
-    <!-- <script src="js/carrossel.js"></script> -->
-    <script src="js/submenu.js"></script>
+    <script src="js/carrossel.js"></script>
+    <script src="js/abrir-carrinho.js"></script>
+    <!-- <script src="js/slide-down.js"></script> -->
+    <script src="js/modal-login.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/carrinho.js"></script>
+    <script src="js/submenu.js"></script>
   </body>
 </html>
