--- a/newArrivals.html
+++ b/newArrivals.html
@@ -492,9 +492,10 @@
     <script src="js/script.js"></script>
     <script src="js/carrossel.js"></script>
     <script src="js/abrir-carrinho.js"></script>
-    <script src="js/slide-down.js"></script>
+    <!-- <script src="js/slide-down.js"></script> -->
     <script src="js/modal-login.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/carrinho.js"></script>
     <script src="js/submenu.js"></script>
   </body>
 </html>
