--- a/desktop.html
+++ b/desktop.html
@@ -79,6 +79,36 @@
       </div>
     </nav>
 
+    <main id="home" >
+      <img class="w-100 carrossel ativo" src="./imgs/filmes.webp" />
+      <img class="w-100 carrossel" src="./imgs/iphone.webp" />
+      <img class="w-100 carrossel" src="./imgs/natal.webp" />
+      <img class="w-100 carrossel" src="./imgs/grandes_marcas.webp" />
+    </main>
+    
+    <div class="container pagamentos">
+      <div class="payment">
+        <p class="text-justify">
+          <i class="fa-solid fa-wallet"></i> Fast and secure payment
+        </p>
+      </div>
+      <div>
+        <p>
+          <i class="fa-solid fa-credit-card"></i> Up to 10 interest-free installments
+        </p>
+      </div>
+
+      <div>
+        <p>
+          <i class="fa-solid fa-hand-holding-dollar"></i> Cardless installments
+        </p>
+      </div>
+
+      <div>
+        <p><i class="fa-solid fa-qrcode"></i> BetãoCoins</p>
+      </div>
+    </div>
+
     <main id="mainDesktop">
       <!-- <img class="w-100 carrossel ativo" src="./imgs/filmes.webp" alt="" />
       <img class="w-100 carrossel" src="./imgs/iphone.webp" alt="" />
